database col edited

--- a/test_ciSystem_20170120/app/views/tbl_monitoring_task_seq_of_test/edit.phtml
+++ b/test_ciSystem_20170120/app/views/tbl_monitoring_task_seq_of_test/edit.phtml
@@ -54,7 +54,7 @@
 <div class="form-group">
     <label for="fieldTimeMonitorTestWait" class="col-sm-2 control-label">Time Of Monitor Of Test Of Wait</label>
     <div class="col-sm-10">
-        <?php echo $this->tag->textField(["time_monitor_test_wait", "size" => 30, "class" => "form-control", "id" => "fieldTimeMonitorTestWait"]) ?>
+        <?php echo $this->tag->textField(["uint_monitor_test_wait", "size" => 30, "class" => "form-control", "id" => "fieldTimeMonitorTestWait"]) ?>
     </div>
 </div>
 
