--- a/test_ciSystem_20170120/app/views/tbl_monitoring_task_seq_of_test/search.phtml
+++ b/test_ciSystem_20170120/app/views/tbl_monitoring_task_seq_of_test/search.phtml
@@ -46,7 +46,7 @@
             <td><?php echo $tbl_monitoring_task_seq_of_test->uint_internalQ_mapping_index ?></td>
             <td><?php echo $tbl_monitoring_task_seq_of_test->uint_monitor_task_seq_order ?></td>
             <td><?php echo $tbl_monitoring_task_seq_of_test->uint_monitor_test_index ?></td>
-            <td><?php echo $tbl_monitoring_task_seq_of_test->time_monitor_test_wait ?></td>
+            <td><?php echo $tbl_monitoring_task_seq_of_test->uint_monitor_test_wait ?></td>
             <td><?php echo $tbl_monitoring_task_seq_of_test->datetime_monitor_test_start ?></td>
             <td><?php echo $tbl_monitoring_task_seq_of_test->datetime_monitor_test_finish ?></td>
             <td><?php echo $tbl_monitoring_task_seq_of_test->uint_monitor_test_status ?></td>
